--- a/client/src/assets/designUpload.css
+++ b/client/src/assets/designUpload.css
@@ -4,13 +4,14 @@
   }
   
   .designImage {
-    width: 100%;
+    width: 99%;
     height: 150px;
     opacity: 0.5;
     z-index: -1;
-    border-radius: 50px;
-    padding: 30px;
+    border-radius: 30px;
+    padding: 5px;
     padding-bottom: 0px;
+    align-items: center;
   }
   
   .designText {
